@@ -32,44 +32,40 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
     @Override
     protected void configure(HttpSecurity http) throws Exception {
-
         http
                 .httpBasic().disable()
                 .cors().and()
                 .csrf().disable()
                 .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
 
-
         http
                 //url별 권한설정
                 .authorizeRequests()
-                .antMatchers("/member/login/**").authenticated()
-                .antMatchers("/book/login/**").authenticated()
                 .antMatchers(HttpMethod.OPTIONS).permitAll()
                 .anyRequest().permitAll()
 
                 .and()
                 .oauth2Login()
                 .loginPage("/oauth2/authorization/kakao")
-                .userInfoEndpoint()
-                .userService(customOAuth2UserService)
 
-                .and()
                 .successHandler(loginSuccessHandler) // 로그인 성공 후 부가작업
-
-                .and()
-                .logout();
+                .userInfoEndpoint()
+                .userService(customOAuth2UserService);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
          CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowedOrigins(List.of(
+                "https://books4dev.me",
+                "https://apiis.books4dev.me",
+                "https://oauth.books4dev.me"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
         configuration.addAllowedHeader("*");
         configuration.addAllowedMethod("*");
-//        configuration.setAllowCredentials(true);
 
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
